# procdork

./: .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  README.md  skills-lock.json  vercel.json
harness/: .dockerignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  charts.py  evaluations.py  extraction.py  load.py  main.py  mcp_server.py  neon_source.py  observations.py  okf_flush.py  olap.py  pyproject.toml  requirements.txt  vercel_app.py
harness/chartui/chart/: README.md  package.json  tsconfig.json  vite.config.ts
harness/chartui/chart/src/: App.svelte  chart-contract.ts  global.css  (+1 more)
harness/connectors/: __init__.py  ingestion.py  neon.py  procdork.py  sources.py  storage.py  workos.py
harness/e2e/: smoke_codex_exec.sh
harness/e2e/benchmarks/: __init__.py  cases.jsonl  cli.py  evaluator.py  raw_sql_server.py  runner.py
harness/evaluators/: inline_citations.py
harness/knowledge/: ingestion-events.md
harness/knowledge/models/: index.md  mart_evaluation_cases.md
harness/knowledge/tables/: benchmark_runs.md  index.md  ingestion_operations.md  supplier_claims.md  supplier_intelligence.md
harness/mcp/: smoke_codex_exec.sh
harness/mcp_apps/chart/: README.md  mcp-app.html
harness/okf/: README.md  index.md
harness/okf/assets/: mart_capture_summary.md  mart_chat_summary.md
harness/okf/models/: mart_capture_summary.md  mart_chat_summary.md
harness/src/harness/: __init__.py  app_message_judging.py  chart_app.html  chart_payload.py  charts.py  cli.py  evaluations.py  load.py  mcp_server.py
harness/transforms/: README.md
harness/transforms/dbt/: dbt_project.yml  profiles.yml.example
microservices/: README.md  SPECS.md  app.py  pyproject.toml
microservices/ingestion/: __init__.py  api.py  artifacts.py  contracts.py  events.py  extraction.py  service.py  util.py  vendors.py
microservices/tests/: fixtures.py  test_ingestion_e2e.py  test_ingestion_live_e2e.py
notebooks/: analysis.py  pyproject.toml
notebooks/__marimo__/session/: analysis.py.json
(+152 files in other folders)
