[project]
name = "harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "cryptography>=49.0.0",
    "dbt-duckdb[md]>=1.10.1",
    "dlt[duckdb]>=1.28.1",
    "duckdb>=1.4.4",
    "lets-plot>=4.11.0",
    "mcp[cli]>=1.28.1",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "workos>=9.1.0",
]
