[project]
name = "harness"
version = "0.1.0"
description = "A portable ELT and analytical serving harness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "dbt-duckdb[md]>=1.10.1",
    "dlt[duckdb]>=1.28.1",
    "duckdb>=1.4.4",
    "logfire[asgi]>=4.0.0",
    "mcp[cli]>=1.28.1",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "workos>=9.1.0",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.hatch.build.targets.wheel.force-include]
"chartui/chart/dist/mcp-app.html" = "harness/chartui/chart/dist/mcp-app.html"

[dependency-groups]
benchmark = ["anthropic>=0.75.0"]
