[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.9.1",
    "marimo[mcp,sql]>=0.23.14",
    "matplotlib>=3.11.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pydantic-ai-slim>=2.9.0",
    "ruff>=0.15.21",
]
